aws/RouteTables-us-east-2.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true, 
     "RouteTableAssociationId": "rtbassoc-70dc6319", 
     "RouteTableId": "rtb-f697349f"
    }
   ], 
   "PropagatingVgws": [], 
   "RouteTableId": "rtb-f697349f", 
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16", 
     "GatewayId": "local", 
     "Origin": "CreateRouteTable", 
     "State": "active"
    }, 
    {
     "DestinationCidrBlock": "0.0.0.0/0", 
     "GatewayId": "igw-e78c598e", 
     "Origin": "CreateRoute", 
     "State": "active"
    }
   ], 
   "Tags": [], 
   "VpcId": "vpc-5d2b8e34"
  }
 ]
}
